force-app/main/default/objects/Preference__c/Preference__c.object-meta.xml
<CustomObject>
    <label>Preference</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Preference number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>