force-app/main/default/objects/Preference__c/fields/Field_Desc_Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Field_Desc_Caregiver__c</fullName>
    <label>Field Desc. (Caregiver)</label>
    <type>TextArea</type>
</CustomField>