force-app/main/default/objects/Preference__c/fields/Field_Desc_Patient__c.field-meta.xml
<CustomField>
    <fullName>Field_Desc_Patient__c</fullName>
    <label>Field Desc. (Patient)</label>
    <type>TextArea</type>
</CustomField>