force-app/main/default/objects/Preference__c/fields/Field_Label_Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Field_Label_Caregiver__c</fullName>
    <label>Field Label (Caregiver)</label>
    <length>120</length>
    <type>Text</type>
</CustomField>