force-app/main/default/objects/Preference__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gender</fullName>
            </value>
            <value>
                <fullName>Smoking</fullName>
            </value>
            <value>
                <fullName>Pets</fullName>
            </value>
            <value>
                <fullName>Personal Care Assistance</fullName>
            </value>
            <value>
                <fullName>Conversation Style</fullName>
            </value>
            <value>
                <fullName>Mobility</fullName>
            </value>
            <value>
                <fullName>Primary Written Language</fullName>
            </value>
            <value>
                <fullName>Need Interpreter?</fullName>
            </value>
            <value>
                <fullName>Living Situation</fullName>
            </value>
            <value>
                <fullName>Type of Service Delivery</fullName>
            </value>
            <value>
                <fullName>Agrees to Staff with Criminal History</fullName>
            </value>
            <value>
                <fullName>CPS Preference</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>