force-app/main/default/objects/Preference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Display_As__c</columns>
    <columns>Field_Label_Patient__c</columns>
    <columns>Field_Label_Caregiver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>