force-app/main/default/objects/Preference__c/listViews/New_Preferences.listView-meta.xml
<ListView>
    <fullName>New_Preferences</fullName>
    <columns>NAME</columns>
    <columns>Sort_Order__c</columns>
    <columns>Type__c</columns>
    <columns>Field_Label_Caregiver__c</columns>
    <columns>Field_Label_Patient__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>New Preferences</label>
</ListView>